<resources>
    <string name="app_name">Fruit Old</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Detail">Watch Detail</string>
    <string name="Apple">Malus domestica Fuji Apple</string>
    <string name="Banana">Taiwan Banana </string>
    <string name="Cherry">Australian cherries</string>
    <string name="Durian">Thai Durian</string>
    <string name="Grape">Italian Grape</string>
    <string name="Fruit">Fruit</string>
    <string name="Filter">Filter</string>
    <string name="Strawberry">Kumamoto Strawberry</string>
    <string name="title_activity_settings">Settings</string>
    <string name="textview1">Appearence</string>
    <string name="textview2">Language</string>
    <string name="textview3">Colour Theme</string>
    <string name="textview4">Font Size</string>
    <string name="textview5">Privacy</string>
    <string name="textview6">Auto-login</string>
    <string name="textview7">Biometrics Login</string>
    <string name="textview8">Accssibility</string>
    <string name="textview9">Colour Blindness</string>
    <string name="textview10">Others</string>
    <string-array name="specialoffer">
        <item>Any</item>
        <item>None</item>
    </string-array>
    <string-array name="Type">
        <item>Any</item>
        <item>Apple</item>
        <item>Banana</item>
        <item>Cherry</item>
        <item>Durian</item>
        <item>Grape</item>
        <item>Orange</item>
        <item>Others</item>

    </string-array>
    <string-array name="Country">
        <item>Any</item>
        <item>Australian</item>
        <item>Japan</item>
        <item>Nea Zealand</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Others</item>

    </string-array>

</resources>
