<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SortFilter">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="302dp"
                    android:layout_height="50dp">

                </SearchView>

                <Button
                    android:id="@+id/button"
                    android:layout_width="106dp"
                    android:layout_height="50dp"
                    android:text="@string/Filter"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:text="@string/Fruit"
                    android:textSize="25sp" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Letter (A-Z)" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Price" />

                <Button
                    android:id="@+id/button13"
                    android:layout_width="60dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Like" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Appleimage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Apple"
                        app:srcCompat="@drawable/apple" />

                    <TextView
                        android:id="@+id/Appletext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Apple" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Bananamage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Apple"
                        app:srcCompat="@drawable/banana" />

                    <TextView
                        android:id="@+id/Bananatext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Banana" />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Cherrymage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Cherry"
                        app:srcCompat="@drawable/cherry" />

                    <TextView
                        android:id="@+id/Cherrytext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Cherry" />

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Durianmage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Durian"
                        app:srcCompat="@drawable/durian" />

                    <TextView
                        android:id="@+id/Duriantext1"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Durian" />

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Grapenmage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/Grape"
                        app:srcCompat="@drawable/grape" />

                    <TextView
                        android:id="@+id/Grapetext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Grape" />

                    <Button
                        android:id="@+id/button5"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Orangeimage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/orange" />

                    <TextView
                        android:id="@+id/Orangetext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Orange" />

                    <Button
                        android:id="@+id/button6"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Strawberryimage"
                        android:layout_width="50dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/strawberry" />

                    <TextView
                        android:id="@+id/Strawberrytext"
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/Strawberry" />

                    <Button
                        android:id="@+id/button7"
                        android:layout_width="10dp"
                        android:layout_height="72dp"
                        android:layout_weight="1"
                        android:background="@color/colorButton"
                        android:text="@string/Detail" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>